Add /user and /user/:id routes. Add record not found error handler
